add use of generics to jour-instrument